--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      - name: Build with Gradle
+        run: ./gradlew shadowJar
+
       - name: Upload Server Artifact
         uses: actions/upload-artifact@v4
         with:
