--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 lombok = "1.18.42"
-jetbrainsAnnotations = "26.0.2"
+jetbrainsAnnotations = "26.0.2-1"
 shadow = "9.2.2"
-minestom = "2025.10.11-1.21.10"
-logback = "1.5.18"
+minestom = "2025.10.31-1.21.10"
+logback = "1.5.21"
 jansi = "2.4.2"
-luckperms = "5.4-SNAPSHOT"
+luckperms = "5.5-SNAPSHOT"
 configurate = "4.2.0"
 
 [libraries]
