--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ luckperms = "5.5-SNAPSHOT"
 configurate = "4.2.0"
 hikari = "6.3.0"
 h2database = "2.4.240"
+minestom-utils = "0.0.1"
 
 [libraries]
 # Common
@@ -20,6 +21,7 @@ sponge-configurate-core = { module = "org.spongepowered:configurate-core", versi
 sponge-configurate-hocon = { module = "org.spongepowered:configurate-hocon", version.ref = "configurate" }
 hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
 h2database = { module = "com.h2database:h2", version.ref = "h2database" }
+minestom-utils = { module = "club.tesseract.minestom:minestom-utils", version.ref = "minestom-utils" }
 
 [plugins]
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
