--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ configurate = "4.2.0"
 hikari = "6.3.0"
 h2database = "2.4.240"
 minestom-utils = "0.0.4"
+spark = "1.10-SNAPSHOT"
+bytesocks-java-client = "1.0-SNAPSHOT"
 
 [libraries]
 # Common
@@ -22,6 +24,8 @@ sponge-configurate-hocon = { module = "org.spongepowered:configurate-hocon", ver
 hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
 h2database = { module = "com.h2database:h2", version.ref = "h2database" }
 minestom-utils = { module = "club.tesseract.minestom:minestom-utils", version.ref = "minestom-utils" }
+minestom-spark = { module = "dev.lu15:spark-minestom", version.ref = "spark" }
+bytesocks-java-client = { module = "me.lucko:bytesocks-java-client", version.ref = "bytesocks-java-client" }
 
 [plugins]
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
